More flex-wrap and fixes link to home

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
 #centerBox {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap-reverse;
 }
 #bottomBox {
   display: flex;
